# Atlas

./: .gitignore  CMakeLists.txt  LICENCE  README.md
include/atlas/: camera.h  feature.h  frame.h  landmark.h  object-id.h  visual-map.h
src/: camera.cc  feature.cc  frame.cc  landmark.cc  object-id.cc  visual-map.cc
test/: CMakeLists.txt  test_frame_test.cc
tools/: build-test.sh  generate-xcode-project.sh  test.sh
