################################
# GTest
################################


SET(ATLAS_TEST_TARGET "AtlasTests")

IF(WIN32)
  SET(GTEST_FORCE_SHARED_CRT ON CACHE BOOL "Always use msvcrt.dll" FORCE)
ENDIF(WIN32)

ADD_SUBDIRECTORY (${CMAKE_CURRENT_LIST_DIR}/../thirdparty/googletest/googletest gtest_build)
ENABLE_TESTING()
INCLUDE_DIRECTORIES(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})

################################
# Atlas Tests
################################
# Add test src files
FILE(GLOB_RECURSE ATLAS_TEST_SOURCES  "${CMAKE_CURRENT_LIST_DIR}/*.cc")

ADD_EXECUTABLE(${ATLAS_TEST_TARGET} ${ATLAS_TEST_SOURCES})

SOURCE_GROUP("Test Source Files" FILES ${ATLAS_TEST_SOURCES})
				
# Link test executable against gtest & gtest_main
TARGET_LINK_LIBRARIES(${ATLAS_TEST_TARGET} gtest gtest_main debug ${ATLAS_TARGET} optimized ${ATLAS_TARGET})

ADD_TEST(${ATLAS_TEST_TARGET} ${ATLAS_TEST_TARGET})

TARGET_COMPILE_OPTIONS(${ATLAS_TEST_TARGET} PUBLIC -std=c++14 -w)

TARGET_INCLUDE_DIRECTORIES(${ATLAS_TEST_TARGET} PUBLIC "include")

SET_TARGET_PROPERTIES(${ATLAS_TEST_TARGET} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ../bin/ )
SET_TARGET_PROPERTIES(${ATLAS_TEST_TARGET} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG ../bin/ )
SET_TARGET_PROPERTIES(${ATLAS_TEST_TARGET} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE ../bin/ )
SET_TARGET_PROPERTIES(${ATLAS_TEST_TARGET} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ../bin/)
SET_TARGET_PROPERTIES(${ATLAS_TEST_TARGET} PROPERTIES DEBUG_POSTFIX "_d" )
